[tool.poetry]
name = "pugsebot"
version = "0.1.0"
description = "O PUG-SE Bot é um bot de Telegram com a função de atender ao grupo de usuários de Python de Sergipe"
authors = ["Wagner Macedo <wagner@python.aju.br>"]
license = "GPL-2.0-only"

readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: Portuguese (Brazilian)",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]
python = "3.6.15"
gdgajubot = {git = "https://github.com/pug-se/GDGAjuBot.git", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
